--- a/templates/app.html
+++ b/templates/app.html
@@ -28,18 +28,18 @@
     <!-- Form -->
     <div class="container">
       <form action="/send" method="POST" enctype=multipart/form-data>
-        <label for="Number One">Ingrese la cadena</label>
+        <label for="Number One">Primera cadena</label>
         <input
           type="text"
-          placeholder="First Number"
+          placeholder="Primera cadena"
           class="u-full-width"
           name="num1"
         />
         <input type="file" name="file" accept=".fasta"/> 
-        <label for="Number Two">Second Number</label>
+        <label for="Number Two">Segunda cadena</label>
         <input
           type="text"
-          placeholder="Second Number"
+          placeholder="Segunda cadena"
           class="u-full-width"
           name="num2"
         />
