--- a/templates/app.html
+++ b/templates/app.html
@@ -53,6 +53,8 @@
           <option value="divide">MUSCLE</option>
           <option value="jukes">Jukes-cantor model</option>
           <option value="kimura">Kimura model</option>
+          <option value="tamura">Tamura model</option>
+          <option value="tajima">Tajime Mei model</option>
         </select>
 
         <input type="submit" value="Alinear" id="calc_btn" />
